[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/Plants/Basic/BasicMush (1).png" type="Texture" id=1]
[ext_resource path="res://scenes/Plants/BasicMush.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 13 )

[node name="BasicMush" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
speed_scale = 0.4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="ProductionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ProducedLabel" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = -26.0
text = "0"
align = 1
valign = 1

[connection signal="body_entered" from="." to="." method="_on_BasicMush_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BasicMush_body_exited"]
[connection signal="timeout" from="ProductionTimer" to="." method="_on_ProductionTimer_timeout"]
